styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: clamp(.5rem, 0.8rem, 1rem);
    min-height: 100dvh;
}

fieldset {
    display: flex;
    justify-content: space-around;
    padding: 5px;
    margin: .5vh 10px;
    gap: 1rem;
}

legend {
    font-weight: 600;
    margin-top: 1rem;
    padding: .5rem;
}

button {
    margin-top: 1rem;
    margin-bottom: 1rem;

    width: 100px;
    height: 2rem;
    border-radius: 5px;
}

h1 {
    margin-top: 1rem;
    font-size: clamp(1em, 2em, 3em);
}

h1, h2 {
    padding-left: 1rem;
    padding-top: .5rem;   
}

section {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

section > div {
    display: flex;
    flex-direction: column;
    width: 100px;
    height: 4rem;
    border-right: 2px solid rgb(218, 217, 217);
    border: 3px inset silver;
    border-bottom: none;
    font-weight: 600;
    padding: 0 .2rem;

    .score {
        color: royalblue;
        font-size: larger;
        padding-top: .3rem;
        align-self: center;
    }
}

div#results {
    border: 3px double black;
    height: clamp(35dvh, 50dvh, 50dvh);
    color: white;
    margin: 0 1rem;
    overflow-y: auto;
    background: repeating-linear-gradient(45deg, #3b3030, gray);
    background-size: 10px;
    width: clamp(330px, 50vw, 660px);

    h2 {
        text-decoration: underline;
    }
}

div p {
    margin: .2rem 1rem;
}

#playAgain {
    display: none;
    width: 100%;
    font-size: larger;
    font-weight: 800;
    color: white;
    background: linear-gradient(30deg, lightblue, rgb(37, 105, 122));
}
div.winner {
    border-style: solid;
    border-width: 5px;
    border-bottom: none;
    border-color: rgb(66, 213, 117);
}

footer {
    margin: 0 1rem .5rem 1rem;
    font-size: smaller;
    font-weight: 400;
    background-color: rgb(238, 238, 238);
}

